form reset bug fix

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     createSpecItem(specItem);
                     extension.field.setValue(specObj);
 
-                    document.forms['product_spec_form'].reset;
+                    document.forms['product_spec_form'].reset();
 
                     setTimeout(function() {
                         for(let i = 0; i < buttons.length; i++) {
